--- a/static/index.html
+++ b/static/index.html
@@ -16,9 +16,16 @@
     height: 50px !important;
 		}
 
+		.welcome{
+			width: 50px !important;
+	    height: 50px !important;
+		}
+
+
 		</style>
 </head>
 <body ng-app = "SigninApp">
+
 	<div ng-controller = "SigninController">
 		<div class="col-sm-4 col-sm-offset-3" ng-hide="isLoggedIn">
 
@@ -29,7 +36,6 @@
 		    <form id="signinForm" >
 		        <!-- NAME -->
 		        <div id="username-group" class="form-group">
-		            <label for="username">Username</label>
 		            <input type="text" class="form-control" id="username" name="username" placeholder="FCS Login id" required ng-model="user.username">
 		            <!-- errors will go here -->
 		        </div>
@@ -54,7 +60,7 @@
     </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li ng-if="!session['exists']" style="color:white">Welcome {{session['username']}}
+        <li ng-if="!session['exists']"  style="color:white" id="welcome">Welcome {{username}}
 						<div>
 						</br>
 						</div>
@@ -73,7 +79,12 @@
 	<div class="btn-group col-xs-4">
 	</div>
 	<div class="btn-group">
-		<button type="button" class="btn btn-primary">Add a List</button>
+		<div id="addlist-group" class="form-group">
+			<input type="text" class="form-control" id="addlist" name="addlist" placeholder="item name" required ng-model="addlist">
+				<button type="button" class="btn btn-primary pull-right" ng-click="postlists()" >Add an item</button>
+
+				<!-- errors will go here -->
+		</div>
 	</div>
 </div>
 <div>
@@ -84,15 +95,20 @@
 	</div>
 <div class="container-fluid text-center">
   <div class="row content">
+
+
+		<!-- THIS IS WHERE THE LISTS AND ARE DISPLAIED -->
     <div class="col-sm-4 sidenav">
-      <a data-toggle="collapse" data-parent="#accordion" ng-click = "getLists()" href="#collapse1">
+      <a data-toggle="collapse" data-parent="#accordion" ng-click = "getlists()" href="#collapse1">
 				<div class="panel panel-default">
 					<div class="panel-heading" style="padding:10; padding-right:0; height:50px">
 						<h4 class="panel-title" style="padding-left:65px">
-								List 1
+								To-Do List
 								<div class="btn-group pull-right">
-								<button id="add1" type="button" style="height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span></button>
-								<button id="delete1" type="button" style="background-color:red; height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button>
+								<button id="add1" type="button" style="height:30px;width:40px;" ng-click = "postitem(id)" class="btn btn-primary">
+									<span class="glyphicon glyphicon-plus"></span></button>
+
+									<!-- <input type="text" class="form-control" id="additem" name="additem" placeholder="item name" required ng-model="additem"> -->
 							</div>
 						</h4>
 					</div>
@@ -100,80 +116,22 @@
 						<div class="panel-body">
 							</a>
 							<ul class="list-group">
-								<li class="list-group-item" ng-repeat = "list in lists">
-									 <a ng-click="getReviews(list.id)">{{list.id}} - {{list.name}}</a>
+								<li class="list-group-item" ng-repeat = "list in listR" >
+									 <a ng-click="getlists()">{{list.listName}}</a>
+
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
-        <a data-toggle="collapse" data-parent="#accordion" ng-click="getLists()" href="#collapse2">
-					<div class="panel panel-default">
-	          <div class="panel-heading" style="padding:10; padding-right:0; height:50px">
-	            <h4 class="panel-title" style="padding-left:65px">
-	                List 2
-									<div class="btn-group pull-right">
-									<button id="add2" type="button" style="height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span></button>
-									<button id="delete2" type="button" style="background-color:red; height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button>
-								</div>
-	            </h4>
-	          </div>
-	          <div id="collapse2" class="panel-collapse collapse">
-	            <div class="panel-body">
-	              </a>
-	              <ul class="list-group">
-	                <li class="list-group-item" ng-repeat = "list in lists">
-	                   <a ng-click="getReviews(list.id)">{{list.id}} - {{list.name}}</a>
-	                </li>
-	              </ul>
-	            </div>
-	          </div>
 	        </div>
-        <a data-toggle="collapse" data-parent="#accordion" ng-click="getLists()" href="#collapse3">
-					<div class="panel panel-default">
-	          <div class="panel-heading" style="padding:10; padding-right:0; height:50px">
-	            <h4 class="panel-title" style="padding-left:65px">
-	                List 3
-									<div class="btn-group pull-right">
-									<button id="add3" type="button" style="height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span></button>
-									<button id="delete3" type="button" style="background-color:red; height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button>
-								</div>
-	            </h4>
-	          </div>
-	          <div id="collapse3" class="panel-collapse collapse">
-	            <div class="panel-body">
-	              </a>
-	              <ul class="list-group">
-	                <li class="list-group-item" ng-repeat = "list in lists">
-	                   <a ng-click="getReviews(list.id)">{{list.id}} - {{list.name}}</a>
-	                </li>
-	              </ul>
-	            </div>
-	          </div>
-	        </div>
-        <a data-toggle="collapse" data-parent="#accordion" ng-click="getLists()" href="#collapse4">
-        <div class="panel panel-default">
-          <div class="panel-heading" style="padding:10; padding-right:0; height:50px">
-            <h4 class="panel-title" style="padding-left:65px">
-                List 4
-								<div class="btn-group pull-right">
-								<button id="add4" type="button" style="height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span></button>
-								<button id="delete4" type="button" style="background-color:red; height:30px;width:40px;" class="btn btn-primary"><span class="glyphicon glyphicon-trash"></span></button>
-							</div>
-            </h4>
-          </div>
-          <div id="collapse4" class="panel-collapse collapse">
-            <div class="panel-body">
-              </a>
-              <ul class="list-group">
-                <li class="list-group-item" ng-repeat = "list in lists">
-                   <a ng-click="getReviews(list.id)">{{list.id}} - {{list.name}}</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+<!-- this is where it ends -->
+
+
+
+
+
+
     </div>
 
 
